--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             <p class="link">
                 <div class="links start_link" onclick="download()">Download as image</div>
-                参考：<a class="links" href="https://step-learn.com/article/javascript/154-paint.html">https://step-learn.com/article/javascript/154-paint.html</a>
+                &nbsp;&nbsp;参考：<a class="links" href="https://step-learn.com/article/javascript/154-paint.html">https://step-learn.com/article/javascript/154-paint.html</a>
             </p>
         </div>
     </div>
